Updated styles to fix overflows

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -163,7 +163,8 @@
           .legend_container {
             height: 20px;
             margin-bottom: 10px;
-            overflow: scroll;
+            overflow-x: hidden;
+            overflow-y: scroll;
             span {
               cursor: pointer;
               display: inline-block;
